--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -391,8 +391,8 @@
   }
   
   .hamburger {
-    width: 36px;
-    height: 36px;
+    width: 44px;
+    height: 44px;
   }
   
   .hamburger-line {
@@ -438,8 +438,8 @@
   }
   
   .hamburger {
-    width: 32px;
-    height: 32px;
+    width: 44px;
+    height: 44px;
   }
   
   .mobile-link-text {
